syntax = "proto3";

package server_administration_service;

option go_package = "./proto";

service ServerAdministrationService {
    rpc GetAddressAndStatus (EmptyRequest) returns (IDAddressAndStatusList);
    rpc UpdateStatus (ServerStatusList) returns (EmptyResponse);

    rpc GetServersInformation (TimeRequest) returns (ServersInformationResponse);
}

message EmptyRequest {}

message IDAddressAndStatus {
    int64 id = 1;
    string address = 2;
    string status = 3;
}

message IDAddressAndStatusList {
    repeated IDAddressAndStatus serverList = 1;
}

message ServerStatus {
    int64 id = 1;
    string status = 2;
}

message ServerStatusList {
    repeated ServerStatus statusList = 1;
}

message EmptyResponse {}

message TimeRequest {
    string startTime = 1;
    string endTime = 2;
}

message ServersInformationResponse {
    int64 numServers = 1;
    int64 numOnServers = 2;
    int64 numOffServers = 3;
    double meanUpTimeRatio = 4;
}